# llmauditor

./: DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt  run_all.py
examples/: chatbot_test.py  integration_validation.py
integration-examples/: 01_quickstart.py  02_openai_live.py  03_openai_decorator.py  04_groq_live.py  05_langchain_openai.py  06_budget_governance.py  07_evaluation_certification.py  08_hallucination.py  09_export_reports.py  10_custom_pricing.py  11_multi_agent.py  12_fastapi_app.py  13_flask_app.py  14_streamlit_app.py  15_error_safety.py  16_full_endtoend.py  README.md
llmauditor/: __init__.py  auditor.py  evaluation.py  exporter.py  hallucination.py  report.py  scoring.py
llmcontrolengine/: __init__.py  control.py  cost.py  report.py  tracker.py
llmsupervisor/: __init__.py  exporter.py  report.py  supervisor.py
