[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmsupervisor"
version = "0.1.0"
description = "LLMSupervisor — Independent Audit & Governance Layer for Production GenAI Systems."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "llm",
    "ai-governance",
    "audit",
    "token-tracking",
    "cost-estimation",
    "generative-ai",
    "execution-control",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rich>=13.0.0",
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-control-engine"
Issues = "https://github.com/yourusername/llm-control-engine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmsupervisor*"]
