[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmauditor"
version = "1.1.1"
description = "Execution-Based GenAI Application Evaluation & Certification Framework"
readme = "README.md"
requires-python = ">=3.9"

license = {text = "Apache-2.0"}

authors = [
  {name = "Karan Tatyaso Kamble", email = "aisolutionsprojects@gmail.com"}
]

maintainers = [
  {name = "Karan Tatyaso Kamble"}
]

keywords = [
  "llm",
  "genai",
  "llmaudit",
  "llm-evaluation",
  "ai-governance",
  "hallucination-detection",
  "genai-monitoring",
  "ai-certification",
  "machine-learning",
  "artificial-intelligence",
  "ai-audit",
  "ai-auditing",
  "llm-audit",
  "ai-compliance",
  "ai-monitoring",
  "ai-testing",
  "llm-testing",
  "ai-validation",
  "genai-audit",
  "llm-governance",
  "ai-risk",
  "ai-assessment",
  "llm-compliance",
  "audit",
  "token-tracking",
  "cost-estimation",
  "generative-ai",
  "execution-control",
  "certification",
  "agentic-ai",
  "openai",
  "langchain",
  "anthropic",
  "gemini",
  "ai-safety",
  "mlops"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing"
]

dependencies = [
    "rich>=13.0.0",
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/AI-Solutions-KK/llmauditor"
Repository = "https://github.com/AI-Solutions-KK/llmauditor"
Issues = "https://github.com/AI-Solutions-KK/llmauditor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmauditor*"]
