[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmauditor"
version = "1.1.5"
description = "LLMAuditor is an execution-based evaluation and monitoring framework for LLM, GenAI, and agentic AI applications, providing hallucination detection, cost tracking, and governance auditing."
readme = "README.md"
requires-python = ">=3.9"

license = {text = "Apache-2.0"}

authors = [
  {name = "Karan Tatyaso Kamble", email = "aisolutionsprojects@gmail.com"}
]

maintainers = [
  {name = "Karan Tatyaso Kamble"}
]

keywords = [
  "llm",
  "genai",
  "generative-ai",
  "ai-evaluation",
  "llm-evaluation",
  "llm-monitoring",
  "ai-governance",
  "hallucination-detection",
  "ai-audit",
  "llm-testing",
  "rag-evaluation",
  "ai-observability",
  "mlops",
  "ai-certification",
  "agentic-ai",
  "ai-safety",
  "token-tracking",
  "cost-estimation",
  "ai-compliance",
  "genai-monitoring",
  "execution-control"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Libraries"
]

dependencies = [
    "rich>=13.0.0",
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/AI-Solutions-KK/llmauditor"
Repository = "https://github.com/AI-Solutions-KK/llmauditor"
Issues = "https://github.com/AI-Solutions-KK/llmauditor/issues"
Documentation = "https://github.com/AI-Solutions-KK/llmauditor#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmauditor*"]
